# CS238-project

./: .gitignore  CMakeLists.txt  README.md
01-model_based_baseline/: 4pbot_fixed.urdf  CMakeLists.txt  app.cpp  world.urdf
01-model_based_baseline/data_logging/: logger.py  plotter.py  real.txt
01-model_based_baseline/data_logging/ftraj_analytical/: estimates.txt  plotter.py  pos.txt  real.txt
01-model_based_baseline/data_logging/hpos_analytical/: estimates.txt  pos.txt  real.txt
02-particle_filter/: 4pbot_fixed.urdf  CMakeLists.txt  app.cpp  world.urdf
02-particle_filter/data_logging/: estimates.txt
02-particle_filter/data_logging/ftraj_pfilter/: plotter.py
02-particle_filter/data_logging/hpos_pfilter/: plotter.py
02-particle_filter/optimizer/: QP.h  QPRegularization.h  QuadProgRT.cpp  QuadProgRT.h  Regularization.h
